Bug 1231855 - Avoid inserting out of (timecode) order entries in WebMBufferedParser.  r=jya