dom/media/webm/WebMBufferedParser.cpp
@@ -9,7 +9,11 @@
 #include "nsThreadUtils.h"
 #include <algorithm>
 
+#define WEBM_DEBUG(arg, ...) MOZ_LOG(gWebMDemuxerLog, mozilla::LogLevel::Debug, ("WebMBufferedParser(%p)::%s: " arg, this, __func__, ##__VA_ARGS__))
+
 namespace mozilla {
+
+extern LazyLogModule gWebMDemuxerLog;
 
 static uint32_t
 VIntLength(unsigned char aFirstByte, uint32_t* aMask)
@@ -183,9 +187,20 @@ void WebMBufferedParser::Append(const unsigned char* aBuffer, uint32_t aLength,
               MOZ_ASSERT(mGotTimecodeScale);
               uint64_t absTimecode = mClusterTimecode + mBlockTimecode;
               absTimecode *= mTimecodeScale;
-              WebMTimeDataOffset entry(endOffset, absTimecode, mLastInitStartOffset,
-                                       mClusterOffset, mClusterEndOffset);
-              aMapping.InsertElementAt(idx, entry);
+              // Avoid creating an entry if the timecode is out of order
+              // (invalid according to the WebM specification) so that
+              // ordering invariants of aMapping are not violated.
+              if (idx == 0 ||
+                  aMapping[idx - 1].mTimecode <= absTimecode ||
+                  (idx + 1 < aMapping.Length() &&
+                   aMapping[idx + 1].mTimecode >= absTimecode)) {
+                WebMTimeDataOffset entry(endOffset, absTimecode, mLastInitStartOffset,
+                                         mClusterOffset, mClusterEndOffset);
+                aMapping.InsertElementAt(idx, entry);
+              } else {
+                WEBM_DEBUG("Out of order timecode %llu in Cluster at %lld ignored",
+                           absTimecode, mClusterOffset);
+              }
             }
           }
         }
@@ -302,6 +317,7 @@ bool WebMBufferedState::CalculateBufferedForRange(int64_t aStartOffset, int64_t 
                  "Must have found greatest WebMTimeDataOffset for end");
   }
 
+  MOZ_ASSERT(mTimeMapping[end].mTimecode >= mTimeMapping[end - 1].mTimecode);
   uint64_t frameDuration = mTimeMapping[end].mTimecode - mTimeMapping[end - 1].mTimecode;
   *aStartTime = mTimeMapping[start].mTimecode;
   *aEndTime = mTimeMapping[end].mTimecode + frameDuration;
@@ -478,3 +494,6 @@ WebMBufferedState::GetNextKeyframeTime(uint64_t aTime, uint64_t* aKeyframeTime)
   return true;
 }
 } // namespace mozilla
+
+#undef WEBM_DEBUG
+
